# Infralytix

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  health.py
backend/app/config/: config.py
backend/app/core/: __init__.py  logging.py
backend/app/database/: session.py
backend/app/exceptions/: exceptions.py
backend/scripts/: init.sql
backend/tests/: __init__.py  conftest.py  test_health.py
docs/adr/: ADR-001-tech-stack.md
docs/sprint-reviews/: sprint-00-review.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
