# =============================================================================
# Infralytix Backend — pyproject.toml
# Python 3.12 | FastAPI | SQLAlchemy | MySQL
# =============================================================================

[project]
name = "infralytix-backend"
version = "0.1.0"
description = "Infralytix — AI-Powered Developer Infrastructure OS Backend"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    # ─── Web Framework ────────────────────────────────────────────────────────
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",

    # ─── Data Validation & Settings ──────────────────────────────────────────
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",

    # ─── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.36,<3.0",
    "alembic>=1.14.0,<2.0",
    "aiomysql>=0.2.0,<0.3",        # Async MySQL driver
    "pymysql>=1.1.0,<2.0",         # Sync MySQL driver (Alembic)
    "cryptography>=43.0.0",        # Required by PyMySQL for secure connections

    # ─── Authentication ───────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-multipart>=0.0.12,<0.1",  # Form data parsing

    # ─── HTTP ─────────────────────────────────────────────────────────────────
    "httpx>=0.28.0,<0.29",          # Async HTTP client (also used in tests)
]

[project.optional-dependencies]
dev = [
    # ─── Testing ──────────────────────────────────────────────────────────────
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=6.0.0,<7.0",
    "anyio>=4.6.0",

    # ─── Linting & Formatting ─────────────────────────────────────────────────
    "ruff>=0.8.0,<0.9",
    "mypy>=1.13.0,<2.0",

    # ─── Type stubs ───────────────────────────────────────────────────────────
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff — Linter + Formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "ANN", # type annotations
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "S101",    # Use of assert (allowed in tests)
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]  # Relax annotation and security rules in tests
"alembic/**/*.py" = ["ANN", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# MyPy — Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic/"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (requires database)",
    "slow: Tests that take >1s",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "alembic/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
